--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue3-vite-admin",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --mode dev ",
+    "dev": "vite --mode dev",
     "build": "vite build",
     "serve": "vite preview"
   },
@@ -22,6 +22,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.15.1",
+    "sass": "^1.39.2",
     "vite": "^2.4.4"
   }
 }
