新增动态加载菜单列表功能

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons": "^0.0.11",
     "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.70",
     "moment": "^2.29.1",
     "qs": "^6.10.1",
+    "unplugin-vue-components": "^0.17.2",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
