--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@element-plus/icons": "^0.0.11",
     "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.70",
+    "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
     "qs": "^6.10.1",
     "spark-md5": "^3.0.2",
