--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "unplugin-vue-components": "^0.17.2",
     "vue": "^3.0.5",
     "vue-router": "^4.0.10",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "wangeditor": "^4.7.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.3.0",
